--- a/A_B_Testing.ipynb
+++ b/A_B_Testing.ipynb
@@ -11,7 +11,8 @@
         "joWqIRrX1wUC",
         "GiIqmb-AhTi1"
       ],
-      "authorship_tag": "ABX9TyO5ph1NmJdTaNnYWxhTrqxo",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMhhUvcJmPSLXEQCUsdz7+b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1828,6 +1829,19 @@
         "  }'''"
       ],
       "execution_count": 119,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BjIBVWVVd-F0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!pip freeze > requirements.txt"
+      ],
+      "execution_count": 120,
       "outputs": []
     }
   ]
